@@ -8,7 +8,7 @@ Copyright: ANN library is copyright University of Maryland and Sunil Arya and
 Maintainer: Nicholas L. Crookston <ncrookston.fs@gmail.com>
 Depends: R (>= 3.0.0)
 Imports: grDevices, graphics, stats, utils
-Suggests: vegan, ccaPP, randomForest, gam, fastICA, parallel
+Suggests: vegan, ccaPP, randomForest, gam, fastICA, parallel, gower
 NeedsCompilation: yes
 Description: Performs nearest neighbor-based imputation using one or more alternative 
  approaches to processing multivariate data. These include methods based on canonical 
