@@ -73,7 +73,7 @@ yai <- function(x=NULL,y=NULL,data=NULL,k=1,noTrgs=FALSE,noRefs=FALSE,
    # ARGUMENT and DATA screening
 
    methodSet=c("msn","msn2","msnPP","mahalanobis","ica","euclidean","gnn",
-               "randomForest","raw","random")
+               "randomForest","raw","random","gower")
                
    if (!(method %in% methodSet))
       stop (paste("method not one of:",paste(methodSet,collapse =", ")))
@@ -113,7 +113,7 @@ yai <- function(x=NULL,y=NULL,data=NULL,k=1,noTrgs=FALSE,noRefs=FALSE,
         randomForest <- randomForest::randomForest
       }
 
-   }     
+   } 
    if (method == "msnPP") # make sure we have package ccaPP loaded
    {
       if (!requireNamespace ("ccaPP")) 
@@ -126,7 +126,17 @@ yai <- function(x=NULL,y=NULL,data=NULL,k=1,noTrgs=FALSE,noRefs=FALSE,
         ccaGrid <- ccaPP::ccaGrid
         ccaProj <- ccaPP::ccaProj
       }
-
+   }
+   if (method == "gower") # make sure we have package gower loaded
+   {
+      if (!requireNamespace ("gower")) 
+      {
+        stop("install gower and try again")
+        # the purpose of this line of code is to suppress CRAN check notes
+        gower_topn <- function (...) NULL
+      } else {
+        gower_topn <- gower::gower_topn
+      }
    }     
 
    cl=match.call()
@@ -175,7 +185,7 @@ yai <- function(x=NULL,y=NULL,data=NULL,k=1,noTrgs=FALSE,noRefs=FALSE,
    }
    else stop ("x is missing or not a matrix nor dataframe")
    if (is.null(yall) & (method %in% c("mahalanobis","ica",
-                        "euclidean","randomForest","raw")))
+                        "euclidean","randomForest","raw","gower")))
    {
       ydum=TRUE
       yall=data.frame(ydummy=rep(1,nrow(xall)),row.names=rownames(xall))
@@ -187,7 +197,7 @@ yai <- function(x=NULL,y=NULL,data=NULL,k=1,noTrgs=FALSE,noRefs=FALSE,
    if (! (method %in% c("random","randomForest")))
    {
       fy=0
-      if (!(method %in% c("mahalanobis","ica","euclidean","raw"))) 
+      if (!(method %in% c("mahalanobis","ica","euclidean","raw","gower"))) 
         fy=sum(findFactors(yall))
       if (fy+sum(findFactors(xall)>0)>0) 
         stop("factors allowed only for methods randomForest or random")
@@ -297,9 +307,9 @@ yai <- function(x=NULL,y=NULL,data=NULL,k=1,noTrgs=FALSE,noRefs=FALSE,
      rownames(ce) = colnames(yRefs)
      yScale=list(center=ce[,1],scale=ce[,2])
    }
-   # for all methods except randomForest, random, and raw, 
+   # for all methods except randomForest, random, raw, and gower
    # variables with zero variance are dropped.
-   if (!(method %in% c("randomForest","random","raw")))
+   if (!(method %in% c("randomForest","random","raw","gower")))
    {
       xDrop=xScale$scale < 1e-10
       if (sum(xDrop) > 0) warning ("x variables with zero variance: ",
@@ -502,7 +512,7 @@ yai <- function(x=NULL,y=NULL,data=NULL,k=1,noTrgs=FALSE,noRefs=FALSE,
          xcvTrgs=scale(xTrgs,center=xScale$center,scale=xScale$scale)
       }
    }
-   else if (method == "raw")
+   else if (method %in% c("raw","gower"))
    {
       xcvRefs=xRefs
       nVec = ncol(xRefs)
@@ -511,6 +521,7 @@ yai <- function(x=NULL,y=NULL,data=NULL,k=1,noTrgs=FALSE,noRefs=FALSE,
          xTrgs=xall[trgs,,drop=FALSE]
          xcvTrgs=as.matrix(xTrgs)
       }
+      if (method == "gower") ann=FALSE
    }
    else if (method == "gnn") # GNN
    {
@@ -707,6 +718,16 @@ yai <- function(x=NULL,y=NULL,data=NULL,k=1,noTrgs=FALSE,noRefs=FALSE,
            neiIdsTrgs[,ic]=rownames(xcvRefs)[d[,ic]]
          }
       }
+      else if (method == "gower")
+      {
+        asdf = as.data.frame(xcvTrgs)
+        gow = gower_topn(x=asdf,y=asdf,n=l)
+        for (i in 2:l)
+        {
+           neiDstTrgs[,(i-1)]=gow$distance[i,]
+           neiIdsTrgs[,(i-1)]=rownames(xcvTrgs)[gow$index[i,]]
+        }
+      }
       else if (method == "randomForest")
       {
         prox=lapply(apply(nodes[rownames(xTrgs),,drop=FALSE],1,as.list),function (x) 
@@ -772,6 +793,16 @@ yai <- function(x=NULL,y=NULL,data=NULL,k=1,noTrgs=FALSE,noRefs=FALSE,
             }
          }
       }
+      else if (method == "gower")
+      {
+        asdf = as.data.frame(xcvRefs)
+        gow = gower_topn(x=asdf,y=asdf,n=l)
+        for (i in 2:l)
+        {
+           neiDstRefs[,(i-1)]=gow$distance[i,]
+           neiIdsRefs[,(i-1)]=rownames(xcvRefs)[gow$index[i,]]
+        }
+      }      
       else if (method == "randomForest")
       {
         prox=lapply(apply(refNodes,1,as.list),function (x) 
